2008-01-23  Sebastien Pouliot  <sebastien@ximian.com>

	* ConstructorShouldNotCallVirtualMethodsRule.cs: Add recursive 
	checks for non-virtual calls (as they can lead to virtual calls). Add
	check for final methods. Add check for calling 'this' sub-classes 
	(versus calling them on other instances, other types)
	* EqualShouldHandleNullArgRule.cs: Change to ITypeRule (and locate
	Equals) and to use rocks. Reimplemented HandlesNullArg based on more
	extensive unit tests. False positives are mostly history :)

2008-01-14  Sebastien Pouliot  <sebastien@ximian.com>

	* ConstructorShouldNotCallVirtualMethodsRule.cs: New. Rule to
	find every virtual calls made inside constructor of unsealed types.
	* GetEntryAssemblyMayReturnNullRule.cs: New. Rule to detect usage
	of Assembly.GetEntryAssembly which returns null when called outside 
	the root application domain [Daniel Abramov]
	* Gendarme.Rules.BadPractice.mdp: Update MD project file.
	* Gendarme.Rules.BadPractice.xml.in: Add rules descriptions.
	* Makefile.am: Add rules/tests to the build.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* CloneMethodShouldNotReturnNullRule.cs: Use new Location ctor.
	* EqualShouldHandleNullArgRule.cs: Use new Location ctor.
	* ImplementingEqualsButNotGetHashCodeAndViceVersaRule.cs: Use new 
	Location ctor.
	* ToStringReturnsNullRule.cs: Use new Location ctor.

2008-01-11  Sebastien Pouliot  <sebastien@ximian.com>

	* CloneMethodShouldNotReturnNullRule.cs: Use rocks and turn a method
	to static.
	* EqualShouldHandleNullArgRule.cs: Turn some methods to static.
	* ToStringReturnsNullRule.cs: Turn some methods to static.

2008-01-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* ToStringReturnsNullRule.cs: Avoid creating MessageCollection 
	until/unless it's needed.

2007-11-23  Sebastien Pouliot  <sebastien@ximian.com> 

	* EqualShouldHandleNullArgRule.cs: Don't create a MessageCollection
	unless we return a message. Avoid NRE if Equals simply return a 