@@ -1,10 +1,4 @@
 <rules>
-	<rule	Name="ImplementingEqualsButNotGetHashCodeAndViceVersaRule" 
-		Type="Gendarme.Rules.BadPractice.ImplementingEqualsButNotGetHashCodeAndViceVersaRule, Gendarme.Rules.BadPractice, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="http://groups.google.com/group/gendarme/web/rules-documentation#ImplementingEqualsButNotGetHashCodeAndViceVersaRule" >
-		<problem>Only one method of Object.Equals (Object) and Object.GetHashCode () is implemented in '{0}'.</problem>
-		<solution>Implement the other method also.</solution>
-	</rule>
 	<rule	Name="CloneMethodShouldNotReturnNullRule" 
 		Type="Gendarme.Rules.BadPractice.CloneMethodShouldNotReturnNullRule, Gendarme.Rules.BadPractice, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
 		Uri="http://groups.google.com/group/gendarme/web/rules-documentation#CloneMethodShouldNotReturnNullRule" >
