@@ -10,8 +10,7 @@ DISTCLEANFILES = Makefile.in Gendarme.Rules.BadPractice.xml TestResult.xml
 badpractice_rules_sources_in = ../../AssemblyInfo.cs.in
 badpractice_rules_generated_sources = $(badpractice_rules_sources_in:.in=)
 badpractice_rules_sources = CloneMethodShouldNotReturnNullRule.cs EqualShouldHandleNullArgRule.cs \
-	ImplementingEqualsButNotGetHashCodeAndViceVersaRule.cs ToStringReturnsNullRule.cs GetEntryAssemblyMayReturnNullRule.cs \
-	ConstructorShouldNotCallVirtualMethodsRule.cs
+	ToStringReturnsNullRule.cs GetEntryAssemblyMayReturnNullRule.cs ConstructorShouldNotCallVirtualMethodsRule.cs
 
 badpractice_rules_build_sources = $(addprefix $(srcdir)/, $(badpractice_rules_sources))
 badpractice_rules_build_sources += $(badpractice_rules_generated_sources)
@@ -35,8 +34,7 @@ uninstall-hook:
 	done;
 
 badpractice_test_sources = CloneMethodShouldNotReturnNullTest.cs EqualShouldHandleNullArgTest.cs \
-	ImplementingEqualsButNotGetHashCodeAndViceVersaTest.cs ToStringReturnsNullTest.cs GetEntryAssemblyMayReturnNullTest.cs \
-	ConstructorShouldNotCallVirtualMethodsTest.cs
+	ToStringReturnsNullTest.cs GetEntryAssemblyMayReturnNullTest.cs ConstructorShouldNotCallVirtualMethodsTest.cs
 
 badpractice_test_build_sources = $(addprefix $(srcdir)/Test/, $(badpractice_test_sources))
 
